# Manim-llm

./: pyproject.toml
Project/media/videos/main/480p15/partial_movie_files/DefaultTemplate/: partial_movie_file_list.txt
