[project]
name = "skibiddi"
version = "0.1.0"
description = "Manim and llm work"
authors = [
    {name = "Arjun Syam"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
